fix relation utils, clean up prepareandupsert